--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
+  "name": "serverless-agokulram1",
+  "description": "Learn how to use serverless functions in less than 30 minutes!",
+  "version": "1.0.0",
+  "main": "index.js",
   "devDependencies": {
-    "netlify-cli": "^14.2.1",
-    "node-fetch": "^3.3.1"
-  }
+    "@eslint/create-config": "^0.4.1",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "netlify-cli": "^12.2.4"
+  },
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "install": "^0.13.0",
+    "luxon": "^3.1.0",
+    "node-fetch": "^3.3.0",
+    "npm": "^9.1.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Gokul Ram",
+  "license": "MIT"
 }
